# UVCCamera

./: .gitignore
libuvccamera/: CMakeLists.txt  build.gradle
libuvccamera/src/main/: AndroidManifest.xml
libuvccamera/src/main/cpp/: Application.mk
libuvccamera/src/main/cpp/UVCCamera/: UVCCamera.h  UVCPreview.cpp  serenegiant_usb_UVCCamera.cpp
libuvccamera/src/main/cpp/libuvc/src/: ctrl.c  frame-mjpeg.c  stream.c
libuvccamera/src/main/java/com/serenegiant/usb/: FrameFormatInfo.java  IFrameCallback.java  USBMonitor.java  UVCCamera.java
libuvccamera/src/main/jni/UVCCamera/: UVCCamera.cpp  UVCCamera.h  UVCPreview.cpp  UVCPreview.h  serenegiant_usb_UVCCamera.cpp
libuvccamera/src/main/jni/libjpeg/: jdmarker.c
libuvccamera/src/main/jni/libjpeg-turbo-1.4.0/: jdmarker.c
libuvccamera/src/main/jni/libuvc/include/libuvc/: libuvc.h
libuvccamera/src/main/jni/libuvc/src/: frame-mjpeg.c  frame.c  stream.c
usbCameraTest/: build.gradle
usbCameraTest0/: build.gradle
usbCameraTest2/: build.gradle
usbCameraTest3/: build.gradle
usbCameraTest4/: build.gradle
usbCameraTest5/: build.gradle
usbCameraTest6/: build.gradle
usbCameraTest7/: build.gradle
usbCameratest7/: build.gradle
